objects/ssot__ResourceWorkShift__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CreatedById__c</fullName>
        <label>Created By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CreatedDate__c</fullName>
        <label>Created Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Resource Work Shift</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsHolidayShift__c</fullName>
        <label>Is Holiday Shift</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsNonStandardShift__c</fullName>
        <label>Is Non Standard Shift</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedById__c</fullName>
        <label>Last Modified By</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerId__c</fullName>
        <label>Owner</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnerObject__c</fullName>
        <label>Owner Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ServiceTerritoryId__c</fullName>
        <label>Service Territory</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftIdentifier__c</fullName>
        <label>Shift Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftStatusCategory__c</fullName>
        <label>Shift Status Category</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftStatus__c</fullName>
        <label>Shift Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShiftTimeSlotType__c</fullName>
        <label>Shift Time Slot Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__WorkResourceId__c</fullName>
        <label>Work Resource</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__WorkTypeId__c</fullName>
        <label>Work Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922302610_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResourceWorkShift_WorkTypeId_map_Wor_rel</label>
        <referenceTo>ssot__WorkType__dlm</referenceTo>
        <relationshipLabel>ResourceWorkShift_WorkTypeId_map_Wor_rel</relationshipLabel>
        <relationshipName>rel_1709922302610_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922305122_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResourceWorkShift_LastModifiedById_m_rel</label>
        <referenceTo>ssot__User__dlm</referenceTo>
        <relationshipLabel>ResourceWorkShift_LastModifiedById_m_rel</relationshipLabel>
        <relationshipName>rel_1709922305122_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1709922318740_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ResourceWorkShift_ServiceTerritoryId_rel</label>
        <referenceTo>ssot__ServiceTerritory__dlm</referenceTo>
        <relationshipLabel>ResourceWorkShift_ServiceTerritoryId_rel</relationshipLabel>
        <relationshipName>rel_1709922318740_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>